--- a/SE1940_assignment/nbproject/project.properties
+++ b/SE1940_assignment/nbproject/project.properties
@@ -25,11 +25,10 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
-endorsed.classpath=
 excludes=
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\fpt\\prj\\library\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\fpt\\prj\\library\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.mssql-jdbc-12.8.1.jre11.jar=D:\\fpt\\prj\\library\\sqljdbc_12.8\\enu\\jars\\mssql-jdbc-12.8.1.jre11.jar
+file.reference.mssql-jdbc-12.8.1.jre11.jar=D:\\fpt\\prj\\library\\mssql-jdbc-12.8.1.jre11.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,9 +38,9 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
+    ${file.reference.mssql-jdbc-12.8.1.jre11.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.mssql-jdbc-12.8.1.jre11.jar}
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -68,6 +67,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
+no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
